# ogt-prophesy

./: README.md  pyproject.toml
data/: amino-acids-counts-archaea.tsv  foldseek-3di-counts-archaea.tsv  sp_hierarchy_table.csv
src/: ml_pipelines.py  notebook_archaea_ogt_prediction.ipynb  notebook_archaea_ogt_prediction_bis.ipynb  toolbox.py
